--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, user-scalable=no">
-<title>M2 Robot Remote Control</title>
+<title>RPiCamera WiFi</title>
 <!-- jQuery UI -->
 <link rel="stylesheet" href="js/jquery-ui.css">
 <script src="js/jquery-1.11.0.min.js"></script>
