--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@ require(["/webiopi.js", "javascript.js"], function(){
 </div>
 
 <div align="center">
-<button id="Preview" onClick="ActionPreview()">Preview</button>
+<button id="ChangeMode" onClick="ChangeMode()">ChangeMode</button>
 <button id="Shutter" onClick="ActionShutter()">Shutter</button>
-<button id="Shutd" onClick="ActionShutdown()">Shutdown</button>
+<button id="Shutdown" onClick="ActionShutdown()">Shutdown</button>
 </div>
 
 
