--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ require(["/webiopi.js", "javascript.js"], function(){
 </script>
 </head>
 <body>
+<div id="text_out"></div>
 <div id="touchArea" align="center">
     <canvas id="canvas"></canvas>
 </div>
